Created weekly report for 2025/01/22.

--- a/reports/20250122.md
+++ b/reports/20250122.md
@@ -4,31 +4,36 @@
 
 ### 1. Goals from Last Week
 
-- [ ] Example goal from last week
+- Have an example model working to classify a cat's breed.
+- Discuss which tools we should be using for the framework of the model.
+- Test various databases and finalize the choice.
 
 ### 2. Progress and Issues
 - **What we did:**
-  - Task 1
-  - Task 2
+  - Set up a basic pretrained model using TensorFlow for testing.
+  - Selected PostgreSQL as the database for the project.
+  - Created a Trello board and assigned tasks.
+  - Developed a basic frontend layout for image uploads.
 - **What worked well:**
-  - Example of what worked
+  - The team divided tasks effectively.
+  - Trello made tracking tasks easier.
 - **What we learned:**
-  - Lesson 1
-  - Lesson 2
+  - Basic integration of TensorFlow models.
+  - How to use database indexing to improve performance.
 - **Challenges:**
-  - Problem 1
-  - Problem 2
+  - Debugging file storage in the backend.
+  - Deciding on the scope of features.
 - **Where we are stuck:**
-  - Description of where help is needed
+  - Improving model accuracy and finalizing features.
 
 ### 3. Plans and Goals for Next Week
 - **High-level goals:**
-  - Goal 1
-  - Goal 2
+  - Finalize the feature set.
+  - Start integrating backend and frontend.
 - **Tasks and responsibilities:**
-  - Task 1 (Assigned to: Team Member A, Estimate: X days)
-  - Task 2 (Assigned to: Team Member B, Estimate: Y days)
-  - Nested subtask 1 (Estimate: Z days)
+  - Integrate the backend API with the frontend (Assigned to: Christian and Stephen, Estimate: 4 days).
+  - Research data preprocessing methods (Assigned to: Troy, Estimate: 3 days).
+  - Prepare meeting agenda and finalize features (Assigned to: Nathaniel, Estimate: 1 day).
 
 ---
 
@@ -37,33 +42,97 @@
 ### 1. Goals from Last Week
 *(Leave this empty for the first week)*
 
-- [ ] Example goal from last week (Team Member A)
-
 ### 2. Progress and Issues
-#### Team Member A:
-- **What I did:**
-  - Task 1
-  - Task 2
-- **What worked well:**
-  - Example of what worked
-- **What I learned:**
-  - Lesson 1
-- **Challenges:**
-  - Problem 1
-- **Where I am stuck:**
-  - Description of where help is needed
 
-#### Team Member B:
-*(Repeat format for additional team members)*
+#### Raed:
+- **What I did:**
+  - Tested database performance and selected PostgreSQL.
+- **What worked well:**
+  - Database testing and comparison were straightforward.
+- **What I learned:**
+  - How to optimize database performance.
+- **Challenges:**
+  - None.
+
+#### Troy:
+- **What I did:**
+  - Researched TensorFlow for the model framework.
+- **What worked well:**
+  - Found resources for pretrained models.
+- **What I learned:**
+  - Basics of TensorFlow pipelines.
+- **Challenges:**
+  - None.
+
+#### Christian:
+- **What I did:**
+  - Set up a basic frontend structure.
+- **What worked well:**
+  - React components were easy to implement.
+- **What I learned:**
+  - Basics of React functional components.
+- **Challenges:**
+  - None.
+
+#### Stephen:
+- **What I did:**
+  - Created backend APIs for file uploads.
+- **What worked well:**
+  - API setup was successful.
+- **What I learned:**
+  - Basics of file storage in the backend.
+- **Challenges:**
+  - Debugging file paths.
+
+#### Nathaniel:
+- **What I did:**
+  - Organized meeting schedules and tasks.
+- **What worked well:**
+  - Everyone agreed on the schedule.
+- **What I learned:**
+  - How to coordinate meetings effectively.
+- **Challenges:**
+  - None.
+
+#### Sam:
+- **What I did:**
+  - Drafted the initial features list.
+- **What worked well:**
+  - Feedback from the team was helpful.
+- **What I learned:**
+  - How to prioritize features.
+- **Challenges:**
+  - None.
+
+#### Zane:
+- **What I did:**
+  - Set up Trello and assigned tasks.
+- **What worked well:**
+  - Trello made it easy to track progress.
+- **What I learned:**
+  - Basics of task management with Trello.
+- **Challenges:**
+  - None.
 
 ### 3. Plans and Goals for Next Week
-#### Team Member A:
-- Task 1 (Estimate: X days)
-- Task 2 (Estimate: Y days)
-- Longer-term goal: **High-level milestone**
 
-#### Team Member B:
-*(Repeat format for additional team members)*
+#### Raed:
+- Research database optimization for project needs (Estimate: 3 days).
 
----
+#### Troy:
+- Test a small dataset with TensorFlow (Estimate: 3 days).
 
+#### Christian:
+- Design and refine the frontend for image uploads (Estimate: 4 days).
+
+#### Stephen:
+- Integrate the backend with the frontend upload system (Estimate: 4 days).
+
+#### Nathaniel:
+- Finalize team meeting agendas (Estimate: 1 day).
+
+#### Sam:
+- Revise the feature list based on team input (Estimate: 2 days).
+
+#### Zane:
+- Update Trello with new tasks and deadlines (Estimate: 1 day).
