--- a/reports/20250115.md
+++ b/reports/20250115.md
@@ -43,7 +43,13 @@
 ### 1. Goals from Last Week
 *(Leave this empty for the first week)*
 
-- [ ] Example goal from last week (Team Member A)
+- **Raed**: Set up the project repository and coordinated with the team to test Git workflows.
+- **Troy**: Brainstormed and listed potential project ideas.
+- **Christian**: Tested Trello and organized tasks for the team.
+- **Stephen**: Reviewed tools for backend development and shared suggestions.
+- **Nathaniel**: Finalized and confirmed the weekly meeting schedule.
+- **Sam**: Created a list of possible features for the project.
+- **Zane**: Added more detailed tasks to the Trello board based on team input.
 
 ### 2. Progress and Issues
 
