--- a/reports/20250122.md
+++ b/reports/20250122.md
@@ -40,7 +40,36 @@
 ## Contributions of Individual Team Members
 
 ### 1. Goals from Last Week
-*(Leave this empty for the first week)*
+### 3. Plans and Goals for Next Week
+
+#### Raed:
+- Tested database integration with the backend.
+- Researched indexing methods for optimizing queries.
+
+#### Troy:
+- Set up a basic model using TensorFlow.
+- Trained the model on a small dataset for testing.
+
+#### Christian:
+- Created a basic frontend layout for image upload.
+- Implemented a preview feature for uploaded images.
+
+#### Stephen:
+- Connected the backend to the database.
+- Tested the API endpoints with sample data.
+
+#### Nathaniel:
+- Scheduled the next team meeting and prepared the agenda.
+- Assisted with organizing project documentation.
+
+#### Sam:
+- Refined the features section based on team feedback.
+- Prepared a roadmap for implementing key features.
+
+#### Zane:
+- Updated and refined the Trello board with new tasks.
+- Monitored team progress and followed up on task completion.
+
 
 ### 2. Progress and Issues
 
