--- a/reports/20250129.md
+++ b/reports/20250129.md
@@ -93,7 +93,7 @@
 - **Challenges:** Debugging alignment issues.
 
 #### Nathaniel:
-- **What I did:** Contributed to organizing the frontend structure and helped align UI elements.
+- **What I did:** Contributed to organizing the frontend structure and helped align UI elements. Coordinated Trello board updates.
 - **What worked well:** Team collaboration on refining the interface.
 - **What I learned:** Basics of user-friendly design principles.
 - **Challenges:** None.
@@ -126,7 +126,7 @@
 - Integrate the backend with the frontend upload system to enable functionality.
 
 #### Nathaniel:
-- Develop and refine the frontend, concentrating on layout and user experience.
+- Develop and refine the frontend, concentrating on layout and user experience. Add things like About Us page, look into creating pdf from profile.
 
 #### Sam:
 - Develop and refine the frontend, adding user input fields for "Is this a Dog/Cat?" and "Is the breed Male/Female?"
