--- a/reports/20250129.md
+++ b/reports/20250129.md
@@ -120,7 +120,7 @@
 - Work on the dog age classifier model.
 
 #### Christian:
-- Work on the object detection model, ensuring it can identify dog / cats in uploaded images.
+- Work on the object detection model, ensuring it can identify dog / cats in uploaded images. Add things like an instructions page, as well as fixing other miscellaneous bugs.
 
 #### Stephen:
 - Integrate the backend with the frontend upload system to enable functionality.
