--- a/reports/20250129.md
+++ b/reports/20250129.md
@@ -87,7 +87,7 @@
 - **Challenges:** No deliverable is ready yet as the work is still in progress.
 
 #### Stephen:
-- **What I did:** Designed and refined the frontend layout for image uploads.
+- **What I did:** Designed and refined the frontend layout for image uploads. Created basic idea of home/landing page.
 - **What worked well:** Successfully implemented a functional UI prototype.
 - **What I learned:** Best practices for creating responsive layouts.
 - **Challenges:** Debugging alignment issues.
@@ -123,7 +123,7 @@
 - Work on the object detection model, ensuring it can identify dog / cats in uploaded images. Add things like an instructions page, as well as fixing other miscellaneous bugs.
 
 #### Stephen:
-- Integrate the backend with the frontend upload system to enable functionality.
+- Integrate the backend with the frontend upload system to enable functionality. Improve home page.
 
 #### Nathaniel:
 - Develop and refine the frontend, concentrating on layout and user experience. Add things like About Us page, look into creating pdf from profile.
