--- a/reports/20250205.md
+++ b/reports/20250205.md
@@ -101,10 +101,10 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 - **Challenges:** 
 
 #### Nathaniel:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Worked on the About page and oversaw Trello use, to make sure everyone was clear on what needs to be done.
+- **What worked well:** Trello is now being used effectively, and the About Us page is in a decent state.
+- **What I learned:** How to use React and Tailwind CSS to create a webpage.
+- **Challenges:** Figuring out what more can be added to our site, and who's doing what.
 
 #### Sam:
 - **What I did:** 
@@ -132,7 +132,7 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 #### Stephen:
 - 
 
-#### Nathaniel:
+#### Nathaniel: Adding images and small descriptions of each of us to the About Us page
 - 
 
 #### Sam:
