--- a/reports/20250205.md
+++ b/reports/20250205.md
@@ -89,10 +89,10 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 - **Challenges:** Integrating ONXX files into frontend. Also wondering how to utilize API calls for more info about breed.
 
 #### Christian:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Added the instructions page to inform users how to use our website, and took care of various UI bugs throughout the program. Also assisted with development of object detection model to detect cats/dogs.
+- **What worked well:** I was able to detect lots of useful next steps that were added to the Trello board and pushed out the Instructions page without any major roadblocks.
+- **What I learned:** I learned a whole lot in general about the inner workings of AI models and further familiarized myself with the use of React, TailwindCSS, and other tools used throughout the project.
+- **Challenges:** Continuing to gain familiarity with frameworks such as React, PyTorch that our group is using.
 
 #### Stephen:
 - **What I did:** 
@@ -127,7 +127,7 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 - Integrate dog classifiers and dog/cat breed info APIs into front end. 
 
 #### Christian:
-- 
+- Begin to work on more of the AI codebase through hands-on experience, and fixing various minor bugs currently present in the app.
 
 #### Stephen:
 - 
