--- a/reports/20250205.md
+++ b/reports/20250205.md
@@ -107,10 +107,10 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 - **Challenges:** Figuring out what more can be added to our site, and who's doing what.
 
 #### Sam:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** I worked on designing the website. I looked into color pallets, website inspiration ideas, and creating a wireflow of the website. I also created a diagram of how the program works for our general page. I also spent some more time learning react/ typescript for the front end. 
+- **What worked well:** I had no issues with any of my tasks this week.
+- **What I learned:** I learned a lot about how to design a website and react/typescript. 
+- **Challenges:** Getting a final UI design for the website.
 
 #### Zane:
 - **What I did:** 
@@ -136,7 +136,9 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 - 
 
 #### Sam:
-- 
+- Creating buttons that let the AI model know if it will be a cat or a dog. 
+- Finalizing the design of the UI so we can implement it. 
+
 
 #### Zane:
 - 
