--- a/reports/20250205.md
+++ b/reports/20250205.md
@@ -95,10 +95,10 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 - **Challenges:** Continuing to gain familiarity with frameworks such as React, PyTorch that our group is using.
 
 #### Stephen:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:**  Worked on the home/landing page of the website, creating a basic design for it.
+- **What worked well:**  I was able to create a design that looked good while incorporating color and style choices for the website.
+- **What I learned:**  I learned more about using Tailwind to create a page.
+- **Challenges:** Getting more familiar with using Tailwind as well as coming up with further design choices of the home page.
 
 #### Nathaniel:
 - **What I did:** Worked on the About page and oversaw Trello use, to make sure everyone was clear on what needs to be done.
@@ -130,7 +130,7 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 - Begin to work on more of the AI codebase through hands-on experience, and fixing various minor bugs currently present in the app.
 
 #### Stephen:
-- 
+- Improving overall look of home/landing page and learning more about using React.
 
 #### Nathaniel: Adding images and small descriptions of each of us to the About Us page
 - 
