--- a/reports/20250205.md
+++ b/reports/20250205.md
@@ -121,7 +121,15 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 ### 3. Plans and Goals for Next Week
 
 #### Raed:
-- 
+- **What I did:** I am currently scraping together data for cat ages. Admmittely, this is a lot more challenging than cat breeds, as data for this isn't as prevalent.
+
+- - **What worked well:** Upon improving my model's backbone I learned of more modern and efficient backbones that have less training time and higher accuracy. I will start implementing this new model next week.
+
+- **What I learned:** I learned that developing a "smart" model isn't just about training data - it is also about how the layers are treated during training. Making a multi-layer inferencing network instead of retraining the last layer is something I hope to accomplish.
+  
+- **Challenges:** This is mostly due to hardware, but I the compute power needed to train an accurate model is immense. Even with a good GPU, my training times are very long. This makes development more difficult because fixing problems sometimes means I have to retrain my model.
+
+
 
 #### Troy:
 - Integrate dog classifiers and dog/cat breed info APIs into front end. 
