Updated readme to show project tree

--- a/reports/20250205.md
+++ b/reports/20250205.md
@@ -123,7 +123,7 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 #### Raed:
 - **What I did:** I am currently scraping together data for cat ages. Admmittely, this is a lot more challenging than cat breeds, as data for this isn't as prevalent.
 
-- - **What worked well:** Upon improving my model's backbone I learned of more modern and efficient backbones that have less training time and higher accuracy. I will start implementing this new model next week.
+- **What worked well:** Upon improving my model's backbone I learned of more modern and efficient backbones that have less training time and higher accuracy. I will start implementing this new model next week.
 
 - **What I learned:** I learned that developing a "smart" model isn't just about training data - it is also about how the layers are treated during training. Making a multi-layer inferencing network instead of retraining the last layer is something I hope to accomplish.
   
