Added to the weekly reports

--- a/reports/20250205.md
+++ b/reports/20250205.md
@@ -76,10 +76,15 @@
 ### 2. Progress and Issues
 
 #### Raed:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** I am currently scraping together data for cat ages. Admmittely, this is a lot more challenging than cat breeds, as data for this isn't as prevalent.
+
+- **What worked well:** Upon improving my model's backbone I learned of more modern and efficient backbones that have less training time and higher accuracy. I will start implementing this new model next week.
+
+- **What I learned:** I learned that developing a "smart" model isn't just about training data - it is also about how the layers are treated during training. Making a multi-layer inferencing network instead of retraining the last layer is something I hope to accomplish.
+  
+- **Challenges:** This is mostly due to hardware, but I the compute power needed to train an accurate model is immense. Even with a good GPU, my training times are very long. This makes development more difficult because fixing problems sometimes means I have to retrain my model.
+
+
 
 #### Troy:
 - **What I did:** Created ONXX files for dog age/breed for frontend and wrote scripts for classifiers in backend. 
@@ -121,14 +126,9 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 ### 3. Plans and Goals for Next Week
 
 #### Raed:
-- **What I did:** I am currently scraping together data for cat ages. Admmittely, this is a lot more challenging than cat breeds, as data for this isn't as prevalent.
-
-- **What worked well:** Upon improving my model's backbone I learned of more modern and efficient backbones that have less training time and higher accuracy. I will start implementing this new model next week.
-
-- **What I learned:** I learned that developing a "smart" model isn't just about training data - it is also about how the layers are treated during training. Making a multi-layer inferencing network instead of retraining the last layer is something I hope to accomplish.
-  
-- **Challenges:** This is mostly due to hardware, but I the compute power needed to train an accurate model is immense. Even with a good GPU, my training times are very long. This makes development more difficult because fixing problems sometimes means I have to retrain my model.
-
+- I hope to acheive 97% accuracy for my cat breed model. I also aim to do some data scraping for cat ages, specifically finding data 
+  for stages of a cat's life. This includes: kitten, adult cat, senior cat. Although making an AI guess between 3 classes is likely   
+  trivial, we might as well include features that may help the user. 
 
 
 #### Troy:
