Update 20250205.md for Zane

--- a/reports/20250205.md
+++ b/reports/20250205.md
@@ -118,10 +118,10 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 - **Challenges:** Getting a final UI design for the website.
 
 #### Zane:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** I worked on the routing and overall framework of the website. I also made pet profiles for cats using "The Cats API" from APINinjas
+- **What worked well:** Everything went well with this weeks projects. The cat profiles went surpisingly smooth, so did the routing, as I have a lot of experience with setting up React routing.
+- **What I learned:** I learned a little bit more about API use, but a lot of the stuff I did this week was stuff I've done previously.
+- **Challenges:** This week went pretty smooth, the only hiccup was with header design and it clipping over the sections below it.
 
 ### 3. Plans and Goals for Next Week
 
@@ -140,8 +140,8 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 #### Stephen:
 - Improving overall look of home/landing page and learning more about using React.
 
-#### Nathaniel: Adding images and small descriptions of each of us to the About Us page
-- 
+#### Nathaniel: 
+- Adding images and small descriptions of each of us to the About Us page
 
 #### Sam:
 - Creating buttons that let the AI model know if it will be a cat or a dog. 
@@ -149,4 +149,6 @@ Also wrote skeleton code for Dog and Cat API calls for more information about th
 
 
 #### Zane:
-- 
+- Adding dog profiles
+- Add a way to save profiles as pdfs or share them directly from the page.
+- Fix page reload issue (returns 404 error when reloading non-home page, this is a common and easy to fix routing issue)
