--- a/reports/20250212.md
+++ b/reports/20250212.md
@@ -88,10 +88,10 @@
 - **Challenges:** 
 
 #### Nathaniel:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Worked on adding images and small descriptions of each of us to the About Us page. Did some bug fixing.
+- **What worked well:** Image and description drop downs look pretty good.
+- **What I learned:** I learned how to make a drop down with css.
+- **Challenges:** Learning Tailwind CSS, I am more familiar with traditional CSS.
 
 #### Sam:
 - **What I did:** 
@@ -120,7 +120,7 @@
 - 
 
 #### Nathaniel:
-- 
+- Finish About Us page. Test functionality of site once we've reached a more complete state.
 
 #### Sam:
 - 
