--- a/reports/20250212.md
+++ b/reports/20250212.md
@@ -82,10 +82,10 @@
 - **Challenges:** 
 
 #### Stephen:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:**  Updated and improved the design of the home page and added images. 
+- **What worked well:**  Changing the design of the page to look better.
+- **What I learned:** Learned more about using React and styling with Tailwind.
+- **Challenges:** Designing and implementing a better looking homepage using Tailwind and React.
 
 #### Nathaniel:
 - **What I did:** Worked on adding images and small descriptions of each of us to the About Us page. Did some bug fixing.
@@ -117,7 +117,7 @@
 - 
 
 #### Stephen:
-- 
+- Adding more detail and information to home page.
 
 #### Nathaniel:
 - Finish About Us page. Test functionality of site once we've reached a more complete state.
