Saving local changes before pulling latest version.

--- a/reports/20250219.md
+++ b/reports/20250219.md
@@ -116,7 +116,7 @@
 - 
 
 #### Troy:
-- Update Dog PDF to have characteristics. 
+- Implement dog lifestage model to frontend. Update Dog PDF/Profile to have age bracket. 
 
 #### Christian:
 - 
