--- a/reports/20250219.md
+++ b/reports/20250219.md
@@ -93,10 +93,10 @@
 - **Challenges:** 
 
 #### Nathaniel:
-- **What I did:**
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Finished About Us page layout and design, just waiting on images and info from some members. Tested some of the websites functionality.
+- **What worked well:** UI and testing both went pretty well.
+- **What I learned:** I learned a bit more about Tailwind CSS
+- **Challenges:** Some of test results were not super accurate. 
 
 #### Sam:
 - **What I did:**
@@ -125,7 +125,7 @@
 - 
 
 #### Nathaniel:
-- 
+- Work on the instructions page, adding tips on photo taking for better results. Also look into creating more tests.
 
 #### Sam:
 - 
