--- a/reports/20250219.md
+++ b/reports/20250219.md
@@ -98,11 +98,13 @@
 - **What I learned:** I learned a bit more about Tailwind CSS
 - **Challenges:** Some of test results were not super accurate. 
 
+
 #### Sam:
-- **What I did:**
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did: I implemented some of the UI designs to the website while also finishing the actual UI wireframe
+- **What worked well:** Changing the colors, adding borders, and moving stuff around the screen went well.
+- **What I learned:** I learned more about typescript
+- **Challenges:** Getting the UI to mesh with what we currently have on the screen was a little tricky to figure out.
+
 
 #### Zane:
 - **What I did:**
@@ -128,7 +130,7 @@
 - Work on the instructions page, adding tips on photo taking for better results. Also look into creating more tests.
 
 #### Sam:
-- 
+- Finish making the UI look like the wireframe. Make sure all of the UI changes work with the front end. 
 
 #### Zane:
 - 
