--- a/reports/20250219.md
+++ b/reports/20250219.md
@@ -87,10 +87,10 @@
 - **Challenges:** 
 
 #### Stephen:
-- **What I did:**
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Worked on finalizing design of home page 
+- **What worked well:** Getting everything to work and look how I wanted.
+- **What I learned:** I learned more about using React and creating effects with it.
+- **Challenges:** Working with React and Tailwind
 
 #### Nathaniel:
 - **What I did:** Finished About Us page layout and design, just waiting on images and info from some members. Tested some of the websites functionality.
@@ -124,7 +124,7 @@
 - 
 
 #### Stephen:
-- 
+- Finishing up things for the home page and testing things out.
 
 #### Nathaniel:
 - Work on the instructions page, adding tips on photo taking for better results. Also look into creating more tests.
