--- a/reports/20250212.md
+++ b/reports/20250212.md
@@ -94,10 +94,10 @@
 - **Challenges:** Learning Tailwind CSS, I am more familiar with traditional CSS.
 
 #### Sam:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Finisehed UI wireframe. Implemented colors and images from wireframe to website. Some of it got wiped when I did a pull before comitting. 
+- **What worked well:** The creation of UI went well.
+- **What I learned:** How to styalzee a .tsx file
+- **Challenges:** Had to learn to figure out weather or not to use css for the .tsx files 
 
 #### Zane:
 - **What I did:** 
@@ -123,7 +123,7 @@
 - Finish About Us page. Test functionality of site once we've reached a more complete state.
 
 #### Sam:
-- 
+- Fully implement the UI
 
 #### Zane:
 - 
