Adding weekly report.

--- a/reports/20250219.md
+++ b/reports/20250219.md
@@ -1,43 +1,41 @@
-# Weekly Status Report - 2025/02/19
+# Weekly Status Report - 2025/02/26
 
 ## Team Report
 
 ### 1. Goals from Last Week
-- Finalize UI/UX components.
-- Improve API response handling for breed information.
-- Ensure smooth model selection flow.
-- Finalize pet profile features and PDF export.
+- Final bug fixes and UI refinements.
+- Improve UI for dog and cat profiles.
+- Connect dog age model to dog profiles.
 
 ### 2. Progress and Issues
 - **What we did:**
-  - Enhanced UI elements and finalized the home page design.
-  - Working on "About Us" page with images and bios.
-  - Implemented model selection buttons and tested functionality.
-  - Improved API handling for breed information to enhance performance.
+  - Completed final UI refinements and testing.
+  - Integrated dog age model into dog profiles.
+  - Improved breed model selection flow.
+  - Refined pet profile features and PDF export.
 - **What worked well:**
-  - UI improvements significantly enhanced user experience.
-  - Model selection buttons integrated smoothly into the frontend.
-  - Effective collaboration and task management.
+  - UI updates improved usability and accessibility.
+  - Successfully connected dog age predictions to profiles.
+  - Model selection process is now stable and intuitive.
 - **What we learned:**
-  - Switching backbones requires more tuning than expected.
-  - Improved proficiency in Tailwind CSS.
-  - Better understanding of API response optimization.
+  - Fine-tuning AI models requires balancing accuracy and performance.
+  - Further proficiency with React and Tailwind CSS.
+  - More efficient methods for handling frontend API calls.
 - **Challenges:**
-  - Achieving high accuracy with the new dog model backbone.
-  - Refining UI without affecting performance.
-  - Ensuring seamless communication between frontend and backend components.
+  - Handling inconsistencies in the dog age model predictions.
+  - Ensuring UI consistency across different devices.
+  - Debugging issues with PDF export formatting.
 
 ### 3. Plans and Goals for Next Week
 - **High-level goals:**
-  - Final bug fixes and UI refinements.
-  - Improve UI for dog and cat profiles.
-  - Work to connect dog age to dog profiles.
+  - Final testing and debugging before deployment.
+  - Make offline feature.
+  - Optimize UI for better performance.
 - **Tasks and responsibilities:**
-  - Final UI refinements and testing (Stephen, Nathaniel)
-  - Dog age model optimization and retraining (Troy)
-  - Ensuring model selection flow stability (Sam, Zane)
-  - Completing pet profile features and PDF export (Zane)
-  - Weekly report documentation and project presentation updates (all)
+  - UI polish and testing 
+  - API performance optimization 
+  - Finalizing pet profile features and PDF export 
+  - Documentation updates and final report preparation 
 
 ---
 
@@ -46,68 +44,66 @@
 ### 1. Goals from Last Week
 
 #### Raed:
-- Improve cat breed classifier accuracy and enhance cat age classification data collection.
+- Deploy a life stages model and redeploy a cat breed model with higher accuracy.
 
 #### Troy:
-- Switch backbones for dog model and retrain to achieve accuracy over 90%.
+- Implement dog life stage model to frontend. Update Dog PDF/Profile to include age bracket.
 
 #### Christian:
-- Continue refining AI codebase and fix minor UI bugs.
+- Improve AI integration and refine UI components.
 
 #### Stephen:
-- Add more detail and information to the home page.
+- Finalize home page design and conduct UI tests.
 
 #### Nathaniel:
-- Finish About Us page and test site functionality.
+- Work on the instructions page and improve photo-taking guidelines.
 
 #### Sam:
-- Implement model selection buttons and finalize UI design.
+- Ensure UI aligns with wireframes and refine interactions.
 
 #### Zane:
-- Develop dog profiles and add PDF export functionality.
+- Improve pet profile features and finalize PDF export.
 
 ### 2. Progress and Issues
 
 #### Raed:
-- **What I did:** Read machine learning papers that aims to solve the same problem as our application. I also began to do data scrapping using the bing API for cat life stages. 
-- **What worked well:** Configuring the bing API was notably easy due to how students have free credits with Microsoft Azure. This made Bing API more accessible to me since API requests can build up large costs.  
-- **What I learned:** I learned how to navigate and configure Microsoft Azure for data scraping.
-- **Challenges:** Data scraping is often time consuming as I have to verify each image to ensure that the data I am using is reliable
+- **What I did:** 
+- **What worked well:** 
+- **What I learned:** 
+- **Challenges:** 
 
 #### Troy:
-- **What I did:** Connected Dog Breed ONNX model to frontend. Created Dog Profiles. Stuck with ResNet50 due to inaccuracies by EfficientNetV2.
-- **What worked well:** Integration of model, profiles, and API calls.
-- **What I learned:** File separation and React coding. 
-- **Challenges:** Connecting the breed connection with the dog profiles. 
+- **What I did:** Implemented dog age model to frontend. Wrote two scripts to verify the correctness of dog api calls/UI.
+- **What worked well:** Dog age model works fine. 
+- **What I learned:** Not to make the testing scripts too complex.
+- **Challenges:** Integrating more things into the app makes the testing scripts hard to follow.
 
 #### Christian:
-- **What I did:**
+- **What I did:** 
 - **What worked well:** 
 - **What I learned:** 
 - **Challenges:** 
 
 #### Stephen:
-- **What I did:** Worked on finalizing design of home page 
-- **What worked well:** Getting everything to work and look how I wanted.
-- **What I learned:** I learned more about using React and creating effects with it.
-- **Challenges:** Working with React and Tailwind
+- **What I did:** 
+- **What worked well:** 
+- **What I learned:** 
+- **Challenges:** 
 
 #### Nathaniel:
-- **What I did:** Finished About Us page layout and design, just waiting on images and info from some members. Tested some of the websites functionality.
-- **What worked well:** UI and testing both went pretty well.
-- **What I learned:** I learned a bit more about Tailwind CSS
-- **Challenges:** Some of test results were not super accurate. 
-
+- **What I did:** 
+- **What worked well:** 
+- **What I learned:** 
+- **Challenges:** 
 
 #### Sam:
-- **What I did: I implemented some of the UI designs to the website while also finishing the actual UI wireframe
-- **What worked well:** Changing the colors, adding borders, and moving stuff around the screen went well.
-- **What I learned:** I learned more about typescript
-- **Challenges:** Getting the UI to mesh with what we currently have on the screen was a little tricky to figure out.
-
+- **What I did:** 
+- **What worked well:** 
+- **What I learned:** 
+- **Challenges:** 
 
 #### Zane:
-- **What I did:**
+- **What I did:** 
 - **What worked well:** 
 - **What I learned:** 
 - **Challenges:** 
@@ -115,22 +111,23 @@
 ### 3. Plans and Goals for Next Week
 
 #### Raed:
-- Deploy a life stages model and redeploy a cat breed model with higher accuracy. 
+-
 
 #### Troy:
-- Implement dog lifestage model to frontend. Update Dog PDF/Profile to have age bracket. 
+- Work on offline mode as well as continue to finalize our beta product. 
 
 #### Christian:
-- 
+-
 
 #### Stephen:
-- Finishing up things for the home page and testing things out.
+-
 
 #### Nathaniel:
-- Work on the instructions page, adding tips on photo taking for better results. Also look into creating more tests.
+-
 
 #### Sam:
-- Finish making the UI look like the wireframe. Make sure all of the UI changes work with the front end. 
+-
 
 #### Zane:
-- 
+-
+
