Adding weekly report.

--- a/reports/20250219.md
+++ b/reports/20250219.md
@@ -1,41 +1,43 @@
-# Weekly Status Report - 2025/02/26
+# Weekly Status Report - 2025/02/19
 
 ## Team Report
 
 ### 1. Goals from Last Week
-- Final bug fixes and UI refinements.
-- Improve UI for dog and cat profiles.
-- Connect dog age model to dog profiles.
+- Finalize UI/UX components.
+- Improve API response handling for breed information.
+- Ensure smooth model selection flow.
+- Finalize pet profile features and PDF export.
 
 ### 2. Progress and Issues
 - **What we did:**
-  - Completed final UI refinements and testing.
-  - Integrated dog age model into dog profiles.
-  - Improved breed model selection flow.
-  - Refined pet profile features and PDF export.
+  - Enhanced UI elements and finalized the home page design.
+  - Working on "About Us" page with images and bios.
+  - Implemented model selection buttons and tested functionality.
+  - Improved API handling for breed information to enhance performance.
 - **What worked well:**
-  - UI updates improved usability and accessibility.
-  - Successfully connected dog age predictions to profiles.
-  - Model selection process is now stable and intuitive.
+  - UI improvements significantly enhanced user experience.
+  - Model selection buttons integrated smoothly into the frontend.
+  - Effective collaboration and task management.
 - **What we learned:**
-  - Fine-tuning AI models requires balancing accuracy and performance.
-  - Further proficiency with React and Tailwind CSS.
-  - More efficient methods for handling frontend API calls.
+  - Switching backbones requires more tuning than expected.
+  - Improved proficiency in Tailwind CSS.
+  - Better understanding of API response optimization.
 - **Challenges:**
-  - Handling inconsistencies in the dog age model predictions.
-  - Ensuring UI consistency across different devices.
-  - Debugging issues with PDF export formatting.
+  - Achieving high accuracy with the new dog model backbone.
+  - Refining UI without affecting performance.
+  - Ensuring seamless communication between frontend and backend components.
 
 ### 3. Plans and Goals for Next Week
 - **High-level goals:**
-  - Final testing and debugging before deployment.
-  - Make offline feature.
-  - Optimize UI for better performance.
+  - Final bug fixes and UI refinements.
+  - Improve UI for dog and cat profiles.
+  - Work to connect dog age to dog profiles.
 - **Tasks and responsibilities:**
-  - UI polish and testing 
-  - API performance optimization 
-  - Finalizing pet profile features and PDF export 
-  - Documentation updates and final report preparation 
+  - Final UI refinements and testing (Stephen, Nathaniel)
+  - Dog age model optimization and retraining (Troy)
+  - Ensuring model selection flow stability (Sam, Zane)
+  - Completing pet profile features and PDF export (Zane)
+  - Weekly report documentation and project presentation updates (all)
 
 ---
 
@@ -44,39 +46,39 @@
 ### 1. Goals from Last Week
 
 #### Raed:
-- Deploy a life stages model and redeploy a cat breed model with higher accuracy.
+- Improve cat breed classifier accuracy and enhance cat age classification data collection.
 
 #### Troy:
-- Implement dog life stage model to frontend. Update Dog PDF/Profile to include age bracket.
+- Switch backbones for dog model and retrain to achieve accuracy over 90%.
 
 #### Christian:
-- Improve AI integration and refine UI components.
+- Continue refining AI codebase and fix minor UI bugs.
 
 #### Stephen:
-- Finalize home page design and conduct UI tests.
+- Add more detail and information to the home page.
 
 #### Nathaniel:
-- Work on the instructions page and improve photo-taking guidelines.
+- Finish About Us page and test site functionality.
 
 #### Sam:
-- Ensure UI aligns with wireframes and refine interactions.
+- Implement model selection buttons and finalize UI design.
 
 #### Zane:
-- Improve pet profile features and finalize PDF export.
+- Develop dog profiles and add PDF export functionality.
 
 ### 2. Progress and Issues
 
 #### Raed:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Read machine learning papers that aim to solve the same problem as our application. I also began data scraping using the Bing API for cat life stages.
+- **What worked well:** Configuring the Bing API was notably easy due to free student credits with Microsoft Azure. This made Bing API more accessible since API requests can build up large costs.  
+- **What I learned:** I learned how to navigate and configure Microsoft Azure for data scraping.
+- **Challenges:** Data scraping is time-consuming as I have to verify each image to ensure that the data I am using is reliable.
 
 #### Troy:
-- **What I did:** Implemented dog age model to frontend. Wrote two scripts to verify the correctness of dog api calls/UI.
-- **What worked well:** Dog age model works fine. 
-- **What I learned:** Not to make the testing scripts too complex.
-- **Challenges:** Integrating more things into the app makes the testing scripts hard to follow.
+- **What I did:** Connected Dog Breed ONNX model to frontend. Created Dog Profiles. Stuck with ResNet50 due to inaccuracies by EfficientNetV2.
+- **What worked well:** Integration of model, profiles, and API calls.
+- **What I learned:** File separation and React coding. 
+- **Challenges:** Connecting the breed classification with the dog profiles.
 
 #### Christian:
 - **What I did:** 
@@ -85,22 +87,22 @@
 - **Challenges:** 
 
 #### Stephen:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Worked on finalizing the design of the home page.
+- **What worked well:** Getting everything to work and look how I wanted.
+- **What I learned:** I learned more about using React and creating effects with it.
+- **Challenges:** Working with React and Tailwind.
 
 #### Nathaniel:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Finished the About Us page layout and design, just waiting on images and info from some members. Tested some of the website's functionality.
+- **What worked well:** UI and testing both went pretty well.
+- **What I learned:** I learned a bit more about Tailwind CSS.
+- **Challenges:** Some test results were not super accurate.
 
 #### Sam:
-- **What I did:** 
-- **What worked well:** 
-- **What I learned:** 
-- **Challenges:** 
+- **What I did:** Implemented some UI designs into the website while also finishing the actual UI wireframe.
+- **What worked well:** Changing colors, adding borders, and moving elements around the screen went well.
+- **What I learned:** I learned more about TypeScript.
+- **Challenges:** Getting the UI to mesh with what we currently have on the screen was tricky.
 
 #### Zane:
 - **What I did:** 
@@ -111,23 +113,22 @@
 ### 3. Plans and Goals for Next Week
 
 #### Raed:
--
+- Deploy a life stages model and redeploy a cat breed model with higher accuracy.
 
 #### Troy:
-- Work on offline mode as well as continue to finalize our beta product. 
+- Implement dog life stage model into the frontend. Update Dog PDF/Profile to have age bracket.
 
 #### Christian:
--
+- 
 
 #### Stephen:
--
+- Finish up the home page and test features.
 
 #### Nathaniel:
--
+- Work on the instructions page, adding tips on photo-taking for better results. Also, look into creating more tests.
 
 #### Sam:
--
+- Finish making the UI look like the wireframe. Ensure all UI changes work smoothly with the frontend.
 
 #### Zane:
--
-
+- 
